welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:1: error: ';' expected but '=' found.
 sumDouble(a: Integer, b: Integer): Integer = {
                                            ^